--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "axios": "^1.1.3"
+    "axios": "^1.1.3",
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "stream-browserify": "^3.0.0"
   }
 }
